dev: 1、调整实现方式为FXML